finished major rewrite v0.2.0

--- a/build.properties
+++ b/build.properties
@@ -1,18 +1,31 @@
-timeout.specs               = 10001
-url.specs.html              = http://fsa.creynders.be/specs/index.html
+#defines the timeout for phantom async operations
+timeout.phantom             = 10001
 
+#main directories
 dir.bin                     = ${basedir}/bin
 dir.lib                     = ${basedir}/lib
 dir.docs                    = ${basedir}/docs
 dir.specs                   = ${basedir}/specs
 dir.src                     = ${basedir}/src
+dir.build                   = ${basedir}/build
+dir.build.current           = ${dir.build}/${timestamp}
 
+#lib directories and files
 dir.jsdoc_toolkit           = ${dir.lib}/jsdoc-toolkit/
 
-file.yui_compressor.jar     = ${dir.lib}/yui-compressor/yuicompressor-2.4.7.jar
 file.jsdoc_toolkit.jar      = ${dir.jsdoc_toolkit}/jsrun.jar
-file.jshint_anttask.jar     = ${dir.lib}/ant-jshint/ant-jshint-R0.1.jar
+file.yui_compressor.jar     = ${dir.lib}/yui-compressor/yuicompressor-2.4.7.jar
 
 file.jshint.js              = ${dir.lib}/jshint/jshint.js
+file.jshint-runner.js       = ${dir.lib}/phantom-jshint-runner.js
 file.jasmine-runner.js      = ${dir.lib}/phantom-jasmine-runner.js
-file.version.txt            = ${basedir}/version.txt
+
+#jasmine spec runner
+file.specs-runner.html      = ${dir.specs}/index.html
+
+#result files
+file.consolidated.js        = ${dir.build.current}/fsa-${version}.js
+file.minified.js            = ${dir.build.current}/fsa-${version}.min.js
+
+#name of the "main" .js src file
+name.base.js                = fsa.js
