renamed fsa to jsfsa

--- a/build.properties
+++ b/build.properties
@@ -24,8 +24,8 @@ file.jasmine-runner.js      = ${dir.lib}/phantom-jasmine-runner.js
 file.specs-runner.html      = ${dir.specs}/index.html
 
 #result files
-file.consolidated.js        = ${dir.build.current}/fsa-${version}.js
-file.minified.js            = ${dir.build.current}/fsa-${version}.min.js
+file.consolidated.js        = ${dir.build.current}/jsfsa-${version}.js
+file.minified.js            = ${dir.build.current}/jsfsa-${version}.min.js
 
 #name of the "main" .js src file
-name.base.js                = fsa.js
+name.base.js                = jsfsa.js
