--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git://github.com/creynders/jsfsa.git"
   },
   "bugs": {
-    "url" : "http://github.com/creynders/jsfsa/issues"
+    "url": "http://github.com/creynders/jsfsa/issues"
   },
   "licenses": [
     {
@@ -22,5 +22,12 @@
     "finite-state machine",
     "automaton",
     "state"
-  ]
+  ],
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.3.0",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-jasmine": "~0.4.1"
+  }
 }
