--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-jshint": "~0.3.0",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-jasmine": "~0.4.1"
+    "grunt-contrib-jasmine": "~0.4.1",
+    "grunt-jsdoc": "~0.2.4"
   }
 }
