adds Travis-CI integration

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "automaton",
         "state"
     ],
+    "scripts": {
+      "test": "grunt test --verbose"
+    },
     "devDependencies": {
         "grunt": "~0.4.1",
         "grunt-contrib-jshint": "~0.3.0",
