--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "state"
     ],
     "scripts": {
-      "test": "grunt test --verbose"
+      "test": "grunt travis --verbose"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
