removes version numbers from dist files !!!
adds all to bower ignore list except for dist files and docs

bumps to v0.3.0

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "jsfsa",
-  "version": "0.2.6",
-  "main": "bin/jsfsa-0.2.6.min.js",
+  "version": "0.3.0",
+  "main": "bin/jsfsa.min.js",
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "components"
+    "**/*",
+    "./!(docs)",
+    "./!(bin/jsfsa.min.js)",
+    "./!(bin/jsfsa.js)"
   ]
 }
